src/codecomparer/PHP.java
/* Generated By:JavaCC: Do not edit this line. PHP.java */
package codecomparer;
import java.util.*;
import java.io.*;
import javax.swing.*;
import java.awt.Color;
public  class PHP implements PHPConstants {
        private static PHP parser ;

        public static void main ( String args [ ] ) {

                if(args.length == 0){
                        System.out.println("PHP Parser Version 0.1Alpha:  Reading from standard input . . .");
                        parser = new PHP(System.in);
                } else if (args.length == 1) {
                        System.out.println("PHP Parser Version 0.1Alpha:  Reading from file " + args[0] + " . . ." );
                        try {
                                parser = new PHP(new java.io.FileInputStream(args[0]));
                        }
                        catch(java.io.FileNotFoundException e){
                                System.out.println("PHP Parser Version 0.1:  File " + args[0] + " not found.");
                                return ;
                        }
                } else {
                        System.out.println("PHP Parser Version 0.1Alpha:  Usage is one of:");
                        System.out.println("         java PHP < inputfile");
                        System.out.println("OR");
                        System.out.println("         java PHP inputfile");
                        return ;
                }
                parser.token_source.SwitchTo(HTML_STATE);
                try {
                        parser.PhpPage();
                        System.out.println("PHP Parser Version 0.1Alpha:  PHP program parsed successfully.");
                }
                catch(ParseException e) {
                        System.out.println("PHP Parser Version 0.1Alpha:  Encountered errors during parse.");
						String s = e.getMessage();
						String [] y = s.split(" ");
						String e02 = y[7].concat(" "+y[8]);
						String e01 = e02.concat(" "+y[9]);
						String e0 = e01.concat(" "+y[10]);
						
						String e1 = e0.concat(" "+y[11]);
						//System.out.println("error"+e1);
						String e2 = e1.concat(" "+y[12]);
						String e3 = e2.concat(" "+y[13]);
						String e4 = e3.concat(" "+y[14]);
						String e5 = e4.concat(" "+y[15]);
						String e6 = e5.concat(" "+y[16]);
						System.out.println("error  "+e6);
						
                       JOptionPane.showMessageDialog(null,"error at " +e6);
						/*for(String t : y)
						{
						System.out.println(t);
						}*/
						//System.out.println(y[7]);
						//BufferedReader reader =new BufferedReader(new FileReader(fileName));
						File f = new File(args[0]);
						Test t1 = new Test();
						//Test t2 = new Test();
						//Test t3 = new Test();
						t1.high(y[4],f);
						//t2.high(y[4],f);
						//t3.high(y[5],f);
                }
        }

  static final public void PhpPage() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PHP_EXPR:
      case HTML_OTHER:
      case HTML:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      HtmlBlock();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PHP_BEGIN:
      jj_consume_token(PHP_BEGIN);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case DOUBLE_STRING_LITERAL_START:
        case SINGLE_STRING_LITERAL_START:
        case HEREDOC_START:
        case REQUIRE_ONCE:
        case REQUIRE:
        case INCLUDE_ONCE:
        case INCLUDE:
        case DEFINE:
        case ECHO:
        case PRINT:
        case SWITCH:
        case CASE:
        case DFLT:
        case BREAK:
        case RETURN:
        case DO:
        case WHILE:
        case FOREACH:
        case FOR:
        case CONTINUE:
        case IF:
        case FUNCTION:
        case CLASS:
        case VAR:
        case PUBLIC:
        case PRIVATE:
        case PROTECTED:
        case ABSTRACT:
        case FINAL:
        case STATIC:
        case INTERFACE:
        case CONST:
        case CLONE:
        case GLOBAL:
        case ARRAY:
        case NEW:
        case PREDEFINED_CONSTANT:
        case PHP_END:
        case DOLLAR:
        case SEMICOLON:
        case TRY:
        case THROW:
        case IDENTIFIER:
        case 105:
        case 109:
        case 112:
        case 114:
        case 142:
        case 147:
        case 148:
        case 149:
        case 150:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        Statement();
      }
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void HtmlBlock() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case HTML:
      jj_consume_token(HTML);
      break;
    case HTML_OTHER:
      jj_consume_token(HTML_OTHER);
      break;
    case PHP_EXPR:
      jj_consume_token(PHP_EXPR);
      Expression();
      jj_consume_token(PHP_END);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Statement() throws ParseException {
    if (jj_2_1(2)) {
      LabeledStatement();
    } else if (jj_2_2(2)) {
      ClassDeclaration();
    } else if (jj_2_3(2)) {
      InterfaceDeclaration();
    } else if (jj_2_4(2)) {
      ExpressionStatement();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 109:
        CompoundStatement();
        break;
      case SWITCH:
      case IF:
        SelectionStatement();
        break;
      case DO:
      case WHILE:
      case FOREACH:
      case FOR:
        IterationStatement();
        break;
      case BREAK:
      case RETURN:
      case CONTINUE:
        JumpStatement();
        break;
      case REQUIRE_ONCE:
      case REQUIRE:
      case INCLUDE_ONCE:
      case INCLUDE:
      case 114:
        IncludeStatement();
        break;
      case ECHO:
      case PRINT:
        EchoStatement();
        break;
      case DEFINE:
        DefineStatement();
        break;
      case FUNCTION:
      case VAR:
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
      case ABSTRACT:
      case FINAL:
      case STATIC:
      case CONST:
      case GLOBAL:
      case DOLLAR:
        MemberDeclaration();
        break;
      case THROW:
        ThrowStatement();
        break;
      case TRY:
        TryBlock();
        break;
      case PHP_END:
      case SEMICOLON:
        EndOfStatement();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void ThrowStatement() throws ParseException {
    jj_consume_token(THROW);
    ClassInstantiation();
    EndOfStatement();
  }

  static final public void TryBlock() throws ParseException {
    jj_consume_token(TRY);
    CompoundStatement();
    label_3:
    while (true) {
      jj_consume_token(CATCH);
      jj_consume_token(105);
      jj_consume_token(IDENTIFIER);
      Variable();
      jj_consume_token(106);
      CompoundStatement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CATCH:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
    }
  }

  static final public void EndOfStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    case PHP_END:
      EmbeddedHtml();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void EmbeddedHtml() throws ParseException {
    jj_consume_token(PHP_END);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case HTML_OTHER:
      case HTML:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case HTML:
        jj_consume_token(HTML);
        break;
      case HTML_OTHER:
        jj_consume_token(HTML_OTHER);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PHP_BEGIN:
      jj_consume_token(PHP_BEGIN);
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void DefineStatement() throws ParseException {
    jj_consume_token(DEFINE);
    jj_consume_token(105);
    String();
    jj_consume_token(107);
    Expression();
    jj_consume_token(106);
    EndOfStatement();
  }

  static final public void LabeledStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CASE:
      jj_consume_token(CASE);
      Expression();
      jj_consume_token(108);
      Statement();
      break;
    case DFLT:
      jj_consume_token(DFLT);
      jj_consume_token(108);
      Statement();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ExpressionStatement() throws ParseException {
    Expression();
    EndOfStatement();
  }

  static final public void CompoundStatement() throws ParseException {
    jj_consume_token(109);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case DOUBLE_STRING_LITERAL_START:
      case SINGLE_STRING_LITERAL_START:
      case HEREDOC_START:
      case REQUIRE_ONCE:
      case REQUIRE:
      case INCLUDE_ONCE:
      case INCLUDE:
      case DEFINE:
      case ECHO:
      case PRINT:
      case SWITCH:
      case CASE:
      case DFLT:
      case BREAK:
      case RETURN:
      case DO:
      case WHILE:
      case FOREACH:
      case FOR:
      case CONTINUE:
      case IF:
      case FUNCTION:
      case CLASS:
      case VAR:
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
      case ABSTRACT:
      case FINAL:
      case STATIC:
      case INTERFACE:
      case CONST:
      case CLONE:
      case GLOBAL:
      case ARRAY:
      case NEW:
      case PREDEFINED_CONSTANT:
      case PHP_END:
      case DOLLAR:
      case SEMICOLON:
      case TRY:
      case THROW:
      case IDENTIFIER:
      case 105:
      case 109:
      case 112:
      case 114:
      case 142:
      case 147:
      case 148:
      case 149:
      case 150:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      Statement();
    }
    jj_consume_token(110);
  }

  static final public void SelectionStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      jj_consume_token(IF);
      jj_consume_token(105);
      Expression();
      jj_consume_token(106);
      Statement();
      label_6:
      while (true) {
        if (jj_2_5(2)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(ELSEIF);
        jj_consume_token(105);
        Expression();
        jj_consume_token(106);
        Statement();
      }
      if (jj_2_6(2)) {
        jj_consume_token(ELSE);
        Statement();
      } else {
        ;
      }
      break;
    case SWITCH:
      jj_consume_token(SWITCH);
      jj_consume_token(105);
      Expression();
      jj_consume_token(106);
      Statement();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
